# rustdb

./: Cargo.toml
src/: client.rs  error.rs  kvs.rs  lib.rs  server.rs
src/engines/: sled.rs
tests/: cli.rs  kv_store.rs  tests.rs
