[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meow"
test = false
bench = false

[[bin]]
name = "kvs"
test = false
bench = false

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"

clap = "3.2.6"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"