[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meow"
test = false
bench = false

[[bin]]
name = "kvs"
test = false
bench = false

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"
failure = { version = "0.1.8", features = ["derive"] }
clap = "3.2.6"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
criterion = "0.3.5"
rand = "0.8.5"
tempfile = "3.3.0"
walkdir = "2.3.2"